force-app/main/default/objects/Contact/fields/Invoca_Phone__c.field-meta.xml
<CustomField>
    <fullName>Invoca_Phone__c</fullName>
    <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(Phone, &apos;.&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;+1&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoca Phone</label>
    <type>Text</type>
</CustomField>