force-app/main/default/objects/Contact/fields/iOS_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>iOS_Last_Activity__c</fullName>
    <description>iOS User last activity date and time in ClientBooks</description>
    <label>iOS Last Activity</label>
    <type>DateTime</type>
</CustomField>