force-app/main/default/objects/Contact/fields/iOS_User__c.field-meta.xml
<CustomField>
    <fullName>iOS_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if user uses CB iOS app</description>
    <label>iOS User</label>
    <type>Checkbox</type>
</CustomField>