force-app/main/default/objects/Contact/fields/Last_SF_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_SF_Activity__c</fullName>
    <label>Last SF Activity</label>
    <type>DateTime</type>
</CustomField>