force-app/main/default/objects/Contact/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <formula>TEXT( Account.Lead_Source__c )</formula>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>