force-app/main/default/objects/Contact/fields/LZ_BIT__c.field-meta.xml
<CustomField>
    <fullName>LZ_BIT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Business Income Tax Return</description>
    <label>LZ BTP</label>
    <type>Checkbox</type>
</CustomField>