force-app/main/default/objects/Contact/fields/LZ_BIT_Status__c.field-meta.xml
<CustomField>
    <fullName>LZ_BIT_Status__c</fullName>
    <label>LZ BTP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>