force-app/main/default/objects/Contact/fields/LZ_Business_LP__c.field-meta.xml
<CustomField>
    <fullName>LZ_Business_LP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Limited Tax Consultations + Webinar and Sales Consultation</description>
    <label>LZ Business LP</label>
    <type>Checkbox</type>
</CustomField>