force-app/main/default/objects/Contact/fields/LZ_Buyer_Tax_Opt_In_Nonprofit__c.field-meta.xml
<CustomField>
    <fullName>LZ_Buyer_Tax_Opt_In_Nonprofit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Webinar and Sales Consultation</description>
    <label>LZ Buyer Tax Opt In Nonprofit</label>
    <type>Checkbox</type>
</CustomField>