force-app/main/default/objects/Contact/fields/LZ_Compliance__c.field-meta.xml
<CustomField>
    <fullName>LZ_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tax Filing to accompany Annual Report Filing + Webinar &amp; Sales Consultation</description>
    <label>LZ Compliance</label>
    <type>Checkbox</type>
</CustomField>