force-app/main/default/objects/Contact/fields/LZ_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>LZ_Customer_ID__c</fullName>
    <label>LZ Customer ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>