force-app/main/default/objects/Contact/fields/LZ_DBA__c.field-meta.xml
<CustomField>
    <fullName>LZ_DBA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Webinar and Sales Consultation</description>
    <label>LZ DBA</label>
    <type>Checkbox</type>
</CustomField>