force-app/main/default/objects/Contact/fields/LZ_Dissolution__c.field-meta.xml
<CustomField>
    <fullName>LZ_Dissolution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales Consultation</description>
    <label>LZ Dissolution</label>
    <type>Checkbox</type>
</CustomField>