force-app/main/default/objects/Contact/fields/LZ_Referral__c.field-meta.xml
<CustomField>
    <fullName>LZ_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Webinar and Sales Consultation</description>
    <label>LZ Referral</label>
    <type>Checkbox</type>
</CustomField>