force-app/main/default/objects/Contact/fields/LZ_Rep__c.field-meta.xml
<CustomField>
    <fullName>LZ_Rep__c</fullName>
    <label>LZ Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>