force-app/main/default/objects/Contact/fields/LZ_SBR_Business_Plan__c.field-meta.xml
<CustomField>
    <fullName>LZ_SBR_Business_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales Consultation</description>
    <label>LZ SBR Business Plan</label>
    <type>Checkbox</type>
</CustomField>