force-app/main/default/objects/Contact/fields/Managed_in__c.field-meta.xml
<CustomField>
    <fullName>Managed_in__c</fullName>
    <formula>IF( VALUE(Account.Customer_Number__c) &gt; 3000000, IMAGE(&quot;/servlet/servlet.FileDownload?file=015j0000000oWm7&quot;,&quot;Salesforce.com&quot; ),IMAGE(&quot;/servlet/servlet.FileDownload?file=015j0000000oWmH&quot;,&quot;Prospect2Client&quot;))</formula>
    <label>Managed in</label>
    <type>Text</type>
</CustomField>