force-app/main/default/objects/Contact/fields/Moved_to_Advisory_1__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Advisory_1__c</fullName>
    <formula>Account.Moved_to_Advisory_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moved to Advisory #1</label>
    <type>Date</type>
</CustomField>