force-app/main/default/objects/Contact/fields/Moved_to_QBR__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_QBR__c</fullName>
    <formula>Account.Moved_to_QBR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moved to QBR</label>
    <type>Date</type>
</CustomField>