force-app/main/default/objects/Contact/fields/Name_in_IRS__c.field-meta.xml
<CustomField>
    <fullName>Name_in_IRS__c</fullName>
    <label>Name in IRS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>