force-app/main/default/objects/Contact/fields/Needs_Dedupe__c.field-meta.xml
<CustomField>
    <fullName>Needs_Dedupe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Dedupe</label>
    <type>Checkbox</type>
</CustomField>