force-app/main/default/objects/Contact/fields/New_Legacy_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Legacy_Amount__c</fullName>
    <label>New Legacy Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>