force-app/main/default/objects/Contact/fields/of_Connected_Calls__c.field-meta.xml
<CustomField>
    <fullName>of_Connected_Calls__c</fullName>
    <description>The number of phone calls extended where the call connected with the contact</description>
    <label># of Connected Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>