force-app/main/default/objects/Contact/fields/of_Pre_TSA_Calls__c.field-meta.xml
<CustomField>
    <fullName>of_Pre_TSA_Calls__c</fullName>
    <description>The number of logged phone calls made prior to a held TSA appointment</description>
    <inlineHelpText>The number of logged phone calls made prior to a held TSA appointment</inlineHelpText>
    <label># of Pre-TSA Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>