force-app/main/default/objects/Contact/fields/of_TSA_Follow_Up_Calls__c.field-meta.xml
<CustomField>
    <fullName>of_TSA_Follow_Up_Calls__c</fullName>
    <description>The number of logged phone calls made after a held TSA appointment, but before the first sale</description>
    <inlineHelpText>The number of logged phone calls made after a held TSA appointment, but before the first sale</inlineHelpText>
    <label># of TSA Follow-Up Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>