force-app/main/default/objects/Contact/fields/Old_Legacy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Old_Legacy_Amount__c</fullName>
    <label>Old Legacy Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>