force-app/main/default/objects/Contact/fields/Onboarding_No_Show__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_No_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding No Show</label>
    <type>Checkbox</type>
</CustomField>