force-app/main/default/objects/Contact/fields/Ownership_in_of_Shares_del__c.field-meta.xml
<CustomField>
    <fullName>Ownership_in_of_Shares_del__c</fullName>
    <label>% Ownership / Number of Shares</label>
    <length>25</length>
    <type>Text</type>
</CustomField>