force-app/main/default/objects/Contact/fields/P2C_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>P2C_Customer_ID__c</fullName>
    <formula>Account.P2C_Customer_ID__c</formula>
    <label>P2C Customer ID</label>
    <type>Text</type>
</CustomField>