force-app/main/default/objects/Contact/fields/P2C_Link__c.field-meta.xml
<CustomField>
    <fullName>P2C_Link__c</fullName>
    <formula>IF (ISBLANK( Account.P2C_Customer_ID__c ), &quot;Not in P2C&quot;, HYPERLINK(&quot;https://www.prospect2client.com/p2c/customerservice/customers/customerDetails.aspx?view=yes&amp;pageNumber=1&amp;storeID=1&amp;customerID=&quot; + Account.P2C_Customer_ID__c,Account.P2C_Customer_ID__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P2C Link</label>
    <type>Text</type>
</CustomField>