force-app/main/default/objects/Contact/fields/P2C_Package__c.field-meta.xml
<CustomField>
    <fullName>P2C_Package__c</fullName>
    <formula>Account.P2C_Package_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P2C Package</label>
    <type>Text</type>
</CustomField>