force-app/main/default/objects/Contact/fields/Payroll_Manager__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Manager__c</fullName>
    <formula>Account.Payroll_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Manager</label>
    <type>Text</type>
</CustomField>