force-app/main/default/objects/Contact/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>