force-app/main/default/objects/Contact/fields/Renewal_Email__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Email</label>
    <type>Checkbox</type>
</CustomField>