force-app/main/default/objects/Contact/fields/Satisfaction_Level_1_5__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Level_1_5__c</fullName>
    <label>Satisfaction Level (1-5)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>