force-app/main/default/objects/Contact/fields/Send_Corp_Docs__c.field-meta.xml
<CustomField>
    <fullName>Send_Corp_Docs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Corp Docs</label>
    <type>Checkbox</type>
</CustomField>