force-app/main/default/objects/Contact/fields/Send_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Welcome_Email__c</fullName>
    <formula>Account.send_welcome_email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Welcome Email</label>
    <type>Checkbox</type>
</CustomField>