force-app/main/default/objects/Contact/fields/Send_Welcome_Email_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Send_Welcome_Email_Time_Stamp__c</fullName>
    <formula>Account.Send_Welcome_Email_Time_Stamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Welcome Email Time Stamp</label>
    <type>DateTime</type>
</CustomField>