force-app/main/default/objects/Contact/fields/Shareholder_Member__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shareholder / Member</label>
    <type>Checkbox</type>
</CustomField>