force-app/main/default/objects/Contact/fields/Sold_By_contact__c.field-meta.xml
<CustomField>
    <fullName>Sold_By_contact__c</fullName>
    <formula>Account.Sales_Rep__r.FirstName + &quot; &quot; +  Account.Sales_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold By - contact</label>
    <type>Text</type>
</CustomField>