force-app/main/default/objects/Contact/fields/SPackage__c.field-meta.xml
<CustomField>
    <fullName>SPackage__c</fullName>
    <label>SPackage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Economy LLC</fullName>
            </value>
            <value>
                <fullName>Express Gold LLC</fullName>
            </value>
            <value>
                <fullName>Standard LLC</fullName>
            </value>
            <value>
                <fullName>Economy Incorporation</fullName>
            </value>
            <value>
                <fullName>Standard Amendment Package</fullName>
            </value>
            <value>
                <fullName>Standard DBA</fullName>
            </value>
            <value>
                <fullName>Premium DBA</fullName>
            </value>
            <value>
                <fullName>Expedited Amendment Package</fullName>
            </value>
            <value>
                <fullName>Express Gold Incorporation</fullName>
            </value>
            <value>
                <fullName>Standard Non-Profit Corporation</fullName>
            </value>
            <value>
                <fullName>Standard Incorporation</fullName>
            </value>
            <value>
                <fullName>Economy Non-Profit Corporation</fullName>
            </value>
            <value>
                <fullName>LLC Formation Essentials</fullName>
            </value>
            <value>
                <fullName>Express Gold Non-Profit Corporation</fullName>
            </value>
            <value>
                <fullName>Express Platinum Non-Profit Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>