force-app/main/default/objects/Contact/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <formula>Text (Account.Account_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>status</label>
    <type>Text</type>
</CustomField>