force-app/main/default/objects/Contact/fields/Tasks_Exported_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Exported_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasks Exported (Contacts)</label>
    <type>Checkbox</type>
</CustomField>