force-app/main/default/objects/Contact/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <label>Total Paid Amount</label>
    <summarizedField>Bill62__Subscription__c.Total_Paid_Amount__c</summarizedField>
    <summaryForeignKey>Bill62__Subscription__c.Bill62__Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>