force-app/main/default/objects/Contact/fields/UTM_Campaign_backend__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign_backend__c</fullName>
    <description>The UTM Campaign field used for backend syncing with Invoca and other tools</description>
    <label>UTM Campaign (backend)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>