force-app/main/default/objects/Contact/fields/UTM_Content_backend__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content_backend__c</fullName>
    <description>The UTM Content field used for backend syncing with Invoca and other tools</description>
    <label>UTM Content (backend)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>