force-app/main/default/objects/Contact/fields/UTM_Medium_backend__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium_backend__c</fullName>
    <description>The UTM Medium field used for backend syncing with Invoca and other tools</description>
    <label>UTM Medium (backend)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>