force-app/main/default/objects/Contact/fields/VTO_August__c.field-meta.xml
<CustomField>
    <fullName>VTO_August__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VTO - August</label>
    <type>Checkbox</type>
</CustomField>