force-app/main/default/objects/Contact/fields/VTO_Need_Email__c.field-meta.xml
<CustomField>
    <fullName>VTO_Need_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VTO Need Email</label>
    <type>Checkbox</type>
</CustomField>