force-app/main/default/objects/Contact/fields/Warm_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Warm_Transfer__c</fullName>
    <label>Warm Transfer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>