force-app/main/default/objects/Contact/fields/Webinar_8_13__c.field-meta.xml
<CustomField>
    <fullName>Webinar_8_13__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webinar 8-13</label>
    <type>Checkbox</type>
</CustomField>