force-app/main/default/objects/Contact/fields/Welcome_Email_Sent_contact__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Sent_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Email Sent (contact)</label>
    <type>Checkbox</type>
</CustomField>