force-app/main/default/objects/Contact/fields/X1800Password__c.field-meta.xml
<CustomField>
    <fullName>X1800Password__c</fullName>
    <label>1800Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>