force-app/main/default/objects/Contact/fields/X1800Username__c.field-meta.xml
<CustomField>
    <fullName>X1800Username__c</fullName>
    <label>1800Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>