force-app/main/default/objects/Contact/fields/X1_1_Attended__c.field-meta.xml
<CustomField>
    <fullName>X1_1_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped from Lead during conversion.</description>
    <label>1-1 Attended</label>
    <type>Checkbox</type>
</CustomField>