force-app/main/default/objects/Contact/fields/X2017_LZ_BTP_Paid__c.field-meta.xml
<CustomField>
    <fullName>X2017_LZ_BTP_Paid__c</fullName>
    <formula>Account.X2017_LZ_BTP_Purchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2017 LZ BTP Paid</label>
    <type>Checkbox</type>
</CustomField>