force-app/main/default/objects/Contact/fields/X2017_Renewal_Amount__c.field-meta.xml
<CustomField>
    <fullName>X2017_Renewal_Amount__c</fullName>
    <formula>Account.X2017_Renewal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2017 Renewal Amount</label>
    <type>Text</type>
</CustomField>