force-app/main/default/objects/Contact/fields/X2018_Renewal__c.field-meta.xml
<CustomField>
    <fullName>X2018_Renewal__c</fullName>
    <formula>Account.X2018_Renewal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2018 Renewal</label>
    <type>Text</type>
</CustomField>