force-app/main/default/objects/Contact/fields/X2018_Renewal_Month__c.field-meta.xml
<CustomField>
    <fullName>X2018_Renewal_Month__c</fullName>
    <formula>Account.X2018_Renewal_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2018 Renewal Month</label>
    <type>Date</type>
</CustomField>