force-app/main/default/objects/Contact/fields/X2019_Renewal__c.field-meta.xml
<CustomField>
    <fullName>X2019_Renewal__c</fullName>
    <formula>Account.X2019_Renewal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2019 Renewal</label>
    <type>Text</type>
</CustomField>