force-app/main/default/objects/Contact/fields/xPilot_Group__c.field-meta.xml
<CustomField>
    <fullName>xPilot_Group__c</fullName>
    <label>Pilot Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pilot Group 1</fullName>
            </value>
            <value>
                <fullName>Pilot Group 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>