force-app/main/default/objects/Contact/fields/Year_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Incorporation__c</fullName>
    <label>Year of Incorporation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>