force-app/main/default/objects/Contact/fields/Zone_fixup__c.field-meta.xml
<CustomField>
    <fullName>Zone_fixup__c</fullName>
    <formula>IF(CASE(UPPER( MailingState ),&apos;CA&apos;,1,&apos;HI&apos;,1,&apos;NV&apos;,1,&apos;OR&apos;,1,&apos;WA&apos;,1, &apos;AK&apos;,1,0)&gt;=1,&quot;Pacific&quot;,null)+ 
IF(CASE(UPPER(MailingState ),&apos;AZ&apos;,1,&apos;CO&apos;,1,&apos;ID&apos;,1,&apos;MT&apos;,1,&apos;NM&apos;,1,&apos;TX&apos;,1,&apos;UT&apos;,1,&apos;WY&apos;,1,0) &gt;= 1,&quot;Mountain&quot;,null)+ 
IF(CASE(UPPER(MailingState ), &apos;AL&apos;, 1, &apos;AR&apos;, 1, &apos;IL&apos;, 1, &apos;IA&apos;, 1,&apos;KS&apos;, 1, &apos;KY&apos;,1,&apos;LA&apos;, 1,&apos;MN&apos;, 1,&apos;MS&apos;, 1,&apos;MO&apos;, 1,&apos;NE&apos;, 1,&apos;ND&apos;, 1, &apos;OK&apos;, 1,&apos;SD&apos;, 1,&apos;WI&apos;, 1, 0) &gt;= 1, &quot;Central&quot;, null)+ 
IF(CASE(UPPER(MailingState ), &apos;CT&apos;, 1, &apos;DE&apos;, 1, &apos;FL&apos;,1, &apos;GA&apos;, 1, &apos;IN&apos;,1, &apos;ME&apos;, 1, &apos;MD&apos;, 1, &apos;MA&apos;, 1,&apos;MI&apos;, 1, &apos;NH&apos;, 1, &apos;NJ&apos;, 1, &apos;NY&apos;, 1, &apos;NC&apos;, 1, &apos;OH&apos;, 1, &apos;PA&apos;, 1, &apos;RI&apos;, 1, &apos;SC&apos;, 1,&apos;TN&apos;,1, &apos;VT&apos;, 1, &apos;VA&apos;, 1, &apos;WV&apos;, 1, 0) &gt;= 1,&quot;Eastern&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact  Zone fixup</label>
    <type>Text</type>
</CustomField>