force-app/main/default/objects/Contact/validationRules/Email_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Email)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Enter owner&apos;s email address</errorMessage>
</ValidationRule>