force-app/main/default/objects/Contact/validationRules/Email_Max_80.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Max_80</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(Email) &gt;= 80</errorConditionFormula>
    <errorMessage>Email Field Exceeded Chartacter limit</errorMessage>
</ValidationRule>