force-app/main/default/objects/Contact/validationRules/Email_Numbers_and_Letters.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Numbers_and_Letters</fullName>
    <active>false</active>
    <errorConditionFormula>ISNUMBER(Email)</errorConditionFormula>
    <errorMessage>Please enter owner&apos;s email in a valid format</errorMessage>
</ValidationRule>