force-app/main/default/objects/Contact/validationRules/Enter_First_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_First_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
    <errorMessage>Enter First Name</errorMessage>
</ValidationRule>