force-app/main/default/objects/Contact/validationRules/First_Name_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
    <errorMessage>Enter Owner&apos;s First Name</errorMessage>
</ValidationRule>