force-app/main/default/objects/Contact/validationRules/First_Name_letters_only.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_letters_only</fullName>
    <active>false</active>
    <errorConditionFormula>ISNUMBER(FirstName)</errorConditionFormula>
    <errorMessage>Enter a valid First Name (only letters)</errorMessage>
</ValidationRule>