force-app/main/default/objects/Contact/validationRules/First_Name_Max_24.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Max_24</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(FirstName) &gt;= 24</errorConditionFormula>
    <errorMessage>First Name exceeded Character limit</errorMessage>
</ValidationRule>