force-app/main/default/objects/Contact/validationRules/Last_Name_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( LastName )</errorConditionFormula>
    <errorMessage>Enter Owner&apos;s Last Name</errorMessage>
</ValidationRule>