force-app/main/default/objects/Contact/validationRules/Last_Name_letters_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_letters_only</fullName>
    <active>false</active>
    <errorConditionFormula>ISNUMBER(FirstName)</errorConditionFormula>
    <errorMessage>Enter a valid Last Name (only letters)</errorMessage>
</ValidationRule>