force-app/main/default/objects/Contact/validationRules/Last_name_max_24.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_name_max_24</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(LastName) &gt;= 24</errorConditionFormula>
    <errorMessage>First Name exceeded Character limit</errorMessage>
</ValidationRule>