force-app/main/default/objects/Contact/validationRules/Mailing_State.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_State</fullName>
    <active>true</active>
    <description>Require Mailing Street for newly created contacts</description>
    <errorConditionFormula>AND(
   $Profile.Name = &quot;Application Support&quot;,  
   ISNEW(),
ISBLANK(MailingState) 
)</errorConditionFormula>
    <errorDisplayField>MailingState</errorDisplayField>
    <errorMessage>You must enter a two-letter Mailing State abbreviation before saving this record.</errorMessage>
</ValidationRule>