force-app/main/default/objects/Contact/validationRules/Phone_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(  Phone )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Enter owner&apos;s phone number</errorMessage>
</ValidationRule>