force-app/main/default/objects/Contact/validationRules/Phone_Max_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Max_10</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(Phone) &gt; 10</errorConditionFormula>
    <errorMessage>Enter Valid phone (10 Digits)</errorMessage>
</ValidationRule>